--- a/.gitattributes
+++ b/.gitattributes
@@ -46,4 +46,4 @@
 *.reason filter=lfs diff=lfs merge=lfs -text
 *.lxo filter=lfs diff=lfs merge=lfs -text
 *.bc filter=lfs diff=lfs merge=lfs -text
-C:/Users/vardh/.vscode/Spotify-Music-Recommendation-System-1/similarity filter=lfs diff=lfs merge=lfs -text
+*.pkl filter=lfs diff=lfs merge=lfs -text
